# app/Http/Controllers/HeadOfficeController.php
@@ -62,6 +62,20 @@ class HeadOfficeController extends Controller
      *         required=false,
      *         @OA\Schema(type="integer", enum={0,1})
      *     ),
+     *     @OA\Parameter(
+     *         name="exclude_subsystem_id",
+     *         in="query",
+     *         description="Filtra por ID de subsistema excluido",
+     *         required=false,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Parameter(
+     *        name="subsystem_id",
+     *        in="query",
+     *        description="Filtra por ID de subsistema",
+     *        required=false,
+     *        @OA\Schema(type="string")
+     *     ),
      *     @OA\Response(
      *         response=200,
      *         description="Listado obtenido exitosamente",
